<resources>
    <string name="app_name">Rules of the game</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="menu_sport_title">Спорт 24/7</string>
    <string name="menu_football_btn">Футбол</string>
    <string name="menu_basketball_btn">Баскетбол</string>
    <string name="menu_volleyball_btn">Волейбол</string>
    <string name="menu_formula_one_btn">Формула 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_player_image_description">Photo player</string>
    <string name="photo_gallery_description">Photo gallery</string>
    <string name="navigation_rules_title">Правила</string>
    <string name="navigation_players_title">Игроки</string>
    <string name="navigation_gallery_title">Галлерея</string>
</resources>