<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/menuFragment">

    <fragment
        android:id="@+id/navigation_rules"
        android:name="ru.grandi.bambino.rulesofthegame.presentation.ui.fragments.RulesGameFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_rules_game" />

    <fragment
        android:id="@+id/navigation_players"
        android:name="ru.grandi.bambino.rulesofthegame.presentation.ui.fragments.PlayersFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_players" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="ru.grandi.bambino.rulesofthegame.presentation.ui.fragments.GalleryFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/menuFragment"
        android:name="ru.grandi.bambino.rulesofthegame.presentation.ui.fragments.MenuFragment"
        android:label="fragment_menu"
        tools:layout="@layout/fragment_menu" />
</navigation>