<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragments.MenuFragment">

    <LinearLayout
        android:id="@+id/menu_btn_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/football_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_football_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/basketball_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_basketball_btn"
            android:layout_marginTop="@dimen/default_vertical_margin"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/volleyball_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_volleyball_btn"
            android:layout_marginTop="@dimen/default_vertical_margin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/formula_one_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_formula_one_btn"
            android:layout_marginTop="@dimen/default_vertical_margin" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>